implemented statsmodule and refactoring code