@@ -6,6 +6,7 @@ import org.bukkit.entity.EntityType;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.LeatherArmorMeta;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.Collections;
 import java.util.List;
@@ -20,12 +21,13 @@ public class GameUtil {
      * @param players The list of players to choose from.
      * @return An Optional containing the selected player, or an empty Optional if the list is empty.
      */
-    public static Optional<Player> selectRandomPlayer(List<Player> players) {
+    public static @NotNull Optional<Player> selectRandomPlayer(@NotNull List<Player> players) {
         if (players.isEmpty()) {
             return Optional.empty();
         }
+
         Collections.shuffle(players);
-        return Optional.of(players.get(0));
+        return Optional.of(players.getFirst());
     }
 
     /**
@@ -34,7 +36,7 @@ public class GameUtil {
      *
      * @param player The player who will receive the Hot Potato armor.
      */
-    public static void setHotPotatoArmor(Player player) {
+    public static void setHotPotatoArmor(@NotNull Player player) {
         ItemStack leatherHelmet = new ItemStack(Material.LEATHER_HELMET);
         LeatherArmorMeta leatherHelmetMeta = (LeatherArmorMeta) leatherHelmet.getItemMeta();
         if (leatherHelmetMeta != null) {
@@ -63,7 +65,6 @@ public class GameUtil {
             leatherBoots.setItemMeta(leatherBootsMeta);
         }
 
-        // Set the armor on the player
         player.getInventory().setHelmet(leatherHelmet);
         player.getInventory().setChestplate(leatherChestplate);
         player.getInventory().setLeggings(leatherLeggings);
@@ -73,35 +74,29 @@ public class GameUtil {
     /**
      * Teleports all players to the provided lobby location.
      *
-     * @param players The list of players to teleport.
-     * @param lobbyLocation The location to teleport the players to.
+     * @param players          The list of players to teleport.
+     * @param lobbyLocationOpt The location to teleport the players to.
      */
-    public static void teleportPlayersToLobby(List<Player> players, Location lobbyLocation) {
-        if (lobbyLocation == null) {
-            return;
-        }
-        for (Player player : players) {
-            player.teleport(lobbyLocation);
-            player.playSound(player.getLocation(), Sound.ENTITY_ENDERMAN_TELEPORT, 1F, 1F);
-            player.setGameMode(GameMode.SURVIVAL);
-        }
+    public static void teleportPlayersToLobby(@NotNull List<Player> players, @NotNull Optional<Location> lobbyLocationOpt) {
+        lobbyLocationOpt.ifPresent(lobbyLocation -> {
+            for (Player player : players) {
+                player.teleport(lobbyLocation);
+                player.playSound(player.getLocation(), Sound.ENTITY_ENDERMAN_TELEPORT, 1F, 1F);
+                player.setGameMode(GameMode.SURVIVAL);
+            }
+        });
     }
 
     /**
      * Clears the inventories of all players except for the player holding the Hot Potato.
      *
      * @param players The list of players whose inventories should be cleared.
-     * @param potato The player holding the Hot Potato.
+     * @param potato  The player holding the Hot Potato.
      */
-    public static void clearInventoriesExceptPotato(List<Player> players, Player potato) {
-        if (potato == null) {
-            return;
-        }
-        for (Player player : players) {
-            if (!player.equals(potato)) {
-                player.getInventory().clear();
-            }
-        }
+    public static void clearInventoriesExceptPotato(@NotNull List<Player> players, @NotNull Player potato) {
+        players.stream()
+                .filter(player -> !player.equals(potato))
+                .forEach(player -> player.getInventory().clear());
     }
 
     /**
@@ -109,10 +104,7 @@ public class GameUtil {
      *
      * @param player The player at whose location the effects will occur.
      */
-    public static void triggerFireworkAndExplosionEffects(Player player) {
-        if (player == null) {
-            return;
-        }
+    public static void triggerFireworkAndExplosionEffects(@NotNull Player player) {
         player.getWorld().spawnParticle(Particle.EXPLOSION, player.getLocation(), 0, 0, 0, 0);
         player.getWorld().spawnEntity(player.getLocation(), EntityType.FIREWORK_ROCKET);
         player.playSound(player.getLocation(), Sound.ENTITY_FIREWORK_ROCKET_LARGE_BLAST, 1F, 1F);
@@ -124,19 +116,10 @@ public class GameUtil {
      * If the time is greater than 20 seconds, the level is set to 0.
      *
      * @param players The list of players whose level will be updated.
-     * @param time The remaining time in seconds.
+     * @param time    The remaining time in seconds.
      */
-    public static void updatePlayerLevels(List<Player> players, int time) {
-        if (players == null || players.isEmpty()) {
-            return;
-        }
-        for (Player player : players) {
-            if (time <= 20) {
-                player.setLevel(time);
-            } else {
-                player.setLevel(0);
-            }
-        }
+    public static void updatePlayerLevels(@NotNull List<Player> players, int time) {
+        players.forEach(player -> player.setLevel(time <= 20 ? time : 0));
     }
 
     /**
@@ -144,23 +127,20 @@ public class GameUtil {
      *
      * @param message The message to broadcast to all players.
      */
-    public static void broadcastMessage(String message) {
-        if (message == null || message.isEmpty()) {
-            return;
-        }
-        for (Player player : Bukkit.getOnlinePlayers()) {
-            player.sendMessage(message);
-        }
+    public static void broadcastMessage(@NotNull String message) {
+        Bukkit.getOnlinePlayers().forEach(player -> player.sendMessage(message));
     }
 
     /**
      * Checks if a given player exists in the list of players.
      *
      * @param players The list of players to check against.
-     * @param player The player to check.
+     * @param player  The player to check.
      * @return An Optional containing the player if found, or an empty Optional if not found.
      */
-    public static Optional<Player> findPlayerInList(List<Player> players, Player player) {
-        return players.stream().filter(p -> p.equals(player)).findFirst();
+    public static @NotNull Optional<Player> findPlayerInList(@NotNull List<Player> players, @NotNull Player player) {
+        return players.stream()
+                .filter(p -> p.equals(player))
+                .findFirst();
     }
 }
